--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="main">
 
             <div class="logo">
-                <img src="logo (1).png">
+                <img src="logo (1).png" title="logo">
             </div>
 
             <ul>
